# hera-r

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL_DEPENDENCIES.md  LICENSE  README.md  SYNC_REPORT.md  app.py  fix_encoding.py  main.py  minimal_working_example.py  pyproject.toml  requirements.txt  setup.py  tasks.py  test_core_functionality.py  test_enhanced_features.py  test_project_structure.py
configs/: default.yaml  research_config.yaml
data/: reference_probes.json
docs/: research_paper.md  user_guide.md
examples/: enhanced_features_demo.py  research_experiment.py
growth_platform/: run_experiment.py
growth_platform/core/: __init__.py
growth_platform/strategies/: __init__.py
growth_platform/utils/: __init__.py
hera/core/: engine.py  patch_registry.py  state_machine.py
hera/modules/: evolutionary_layer.py  evolutionary_layer_enhanced.py  immune_system.py  immune_system_enhanced.py  sae_interface.py
hera/utils/: logger.py  metrics.py
hera_framework/: README.md
hera_framework/experiments/growth_example/: README.md  config.yaml  run.py
hera_framework/experiments/growth_experiment_1/src/: growing_network.py
hera_framework/experiments/svm_fnn_experiment/: config.yaml  main.py
hera_framework/experiments/svm_fnn_experiment/utils/: logger.py
hera_framework/research/growth_representation_study/: research_plan.md
hera_framework/research/growth_representation_study/experiments/strategy_comparison/: experiment_design.md
hera_framework/templates/: experiment_design.md  growth_experiment.md  research_question.md  research_report.md
scripts/: setup_dev.py
tests/: __init__.py  conftest.py  test_evolutionary_layer.py  test_immune_system.py  test_logger.py  test_performance.py  test_sae_interface.py  test_utils.py
utils/: logger.py  metrics.py
